# aussie-grocery-mcp

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  cache.py  coverage.xml  development.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  test_smoke.py  woolworths.py
.github/workflows/: ci.yml  release-ghcr.yml
tests/: conftest.py  test_cache.py  test_main_helpers.py  test_search_with_nutrition.py
