[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aussie-grocery-mcp"
version = "0.1.0"
description = "Dual-mode MCP + OpenAPI server for Woolworths product and nutrition lookup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastmcp>=2.0.0",
	"fastapi>=0.110.0",
	"uvicorn>=0.29.0",
	"httpx>=0.27.0",
	"aiosqlite>=0.20.0",
	"python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
	"pytest-asyncio>=0.24.0",
	"pytest-cov>=5.0.0",
	"ruff>=0.6.9",
]

[tool.setuptools]
py-modules = ["main", "cache", "woolworths", "test_smoke"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
